2011-01-11  Helmut Eller  <heller@common-lisp.net>

	Some upgrades for MIT Scheme backend.

	* swank-mit-scheme.scm (netcat, netcat-accept): Use netcat-openbsd
	syntax.  This version doesn't print the port number anymore
	defeating the original purpose of using netcat.
	(start-swank): Hardcode portnumber to 4055 until somebody cares
	enough to write proper server ports.
	(emacs-rex): Include a nonsense message with the :abort reply.

2010-12-10  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-browser): Rename to
	`slime-sprof-report', leave `slime-sprof-browser' as an alias.

2010-12-09  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect): Work on methods
	without associated generic function.

2010-10-28  Stas Boukarev  <stassats@gmail.com>

	* swank-package-fu.lisp (list-structure-symbols): Include the name
	of the structure too.

2010-10-17  Helmut Eller  <heller@common-lisp.net>

	Some updates to the Kawa backend.

	* swank-kawa.scm (%%runnable): Use standard
	gnu.mapping.RunnableClosure but print the stacktrace on
	exceptions.
	(listener-loop): Invoke debugger on unhandled exceptions.  The
	debugger will use stacksnapshots if the exception matches.
	(invoke-debugger, break, breakpoint, request-breakpoint): New.
	Used to "invoke" the debugger from normal code.
	(process-vm-event, debug-info, event-stacktrace): Handle
	breakpoint events.
	(interrupt-thread, throwable-stacktrace, breakpoint-condition):
	New.
	(throw-to-toplevel): For breakpoint events use
	Thread#forceEarlyReturn.
	(typecase): Add support for or and eql types.
	(bytemethod>src-loc): New.
	(src-loc>elisp): Use stratum "java" as this seems to work better.
	(print-object, print-unreadable-object): New
	(pprint-to-string): Use it.

2010-09-26  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-history-pattern): Match \t too,
	besides \  and \n.

2010-09-22  Stas Boukarev  <stassats@gmail.com>
